@@ -77,5 +77,15 @@
     "statsSubtitleAll": "Troškovi po kategoriji za svaki mjesec",
     "statsExpenseNumberSingular": "{} trošak",
     "statsExpenseNumberPluralSmall": "{} troška",
-    "statsExpenseNumberPlural": "{} troškova"
+    "statsExpenseNumberPlural": "{} troškova",
+    "errorEmailInUse": "Tvoj email se koristi",
+    "errorEmailInvalid": "Tvoj email je nevažeći",
+    "errorOperationNotAllowed": "Operacija nije dopuštena",
+    "errorWeakPassword": "Tvoja lozinka nije dovoljno jaka",
+    "errorTooManyRequests": "Previše zahtjeva",
+    "errorAccountDisabled": "Tvoj račun je onemogućen",
+    "errorUserNotFound": "Tvoj račun nije pronađen",
+    "errorPasswordWrong": "Tvoja lozinka je pogrešna",
+    "errorInvalidCredential": "Tvoji podaci za prijavu su nevažeći",
+    "errorUnknown": "Nepoznata greška"
 }
